styles/core.less
// Misc

.preview-pane .preview-header {
  background: transparent;
}

.preview-pane .results-view .path-match-number {
  // show number also on selected item
  color: inherit;
  opacity: .6;
}

.tool-panel.incompatible-packages {
  // incompatible-packages isn't really a tool-panel and more a whole pane
  .text(normal);
  background-color: @level-2-color;
}

atom-notifications {
  top: @tab-height + 2rem;
  right: 1rem;
  font-size: 1rem;

  atom-notification {
    margin-bottom: .5rem;

    p,
    ul,
    ol {
      margin-bottom: .5rem;
    }

    &:first-child.has-close .message {
      padding-right: 120px;
    }

    &:only-child.has-close .message,
    &.has-close .message {
      padding-right: 40px;
    }

    .item {
      padding: @component-padding/2;
    }

    &.icon:before {
      padding-top: .85em;
    }
  }
}

// Styleguide ----------------------------------------------

.styleguide {
  padding: 0;

  section.bordered,
  .section.bordered {
    border-top: none;
  }

  .example {
    border: none;

    .example-rendered {
      border: 1px solid @base-border-color;
      border-right: none;
      background: @inset-panel-background-color;
    }

    .example-code {
      border: 1px solid @base-border-color;
      border-radius: 0 @component-border-radius @component-border-radius 0;
      background: @ui-editor-background-color;
    }
  }

  [data-name="variables"] .example-rendered {
    border-right: 1px solid @base-border-color;
    border-radius: @component-border-radius;
  }

  // Components
  atom-panel.modal:after {
    position: absolute;  // prevent overlay backdrop from leaking outside
    left: -@component-padding;
    right: -@component-padding;
    bottom: -@component-padding;
  }

  atom-panel.modal:after {
    position: absolute;  // prevent overlay backdrop from leaking outside
  }

  .select-list atom-text-editor[mini],
  .popover-list atom-text-editor[mini] {
    height: initial;
  }
}

.styleguide-sections > section {
  &,
  &.collapsed {
    background: transparent;
  }
}

